# financas-pessoais

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  SKILL.md  alembic.ini  migrar_local_para_railway.py  nixpacks.toml  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py  seeds.py
backend/app/api/: deps.py  router.py
backend/app/api/auth/: auth.ts  router.py
backend/app/api/backup/: router.py
backend/app/api/balanceamento/: analise.py  config.py
backend/app/api/cadastros/: anos.py  ativos.py  cartoes.py  categorias_despesas.py  categorias_receitas.py  contas.py  instituicoes.py  produtos.py
backend/app/api/dashboard/: router.py
backend/app/api/importacao/: router.py
backend/app/api/lancamentos/: aportes.py  combustivel.py  cotacoes.py  despesas.py  pagamentos_cartao.py  (+4 more)
backend/app/core/: config.py  database.py  middleware_auth.py
backend/app/domain/: enums.py
backend/app/schemas/: anos.py  aportes.py  ativos.py  auth.py  backup.py  balanceamento.py  cartoes.py  categorias.py  combustivel.py  common.py  consolidacao.py  contas.py  cotacoes.py  dashboard.py  despesas.py  importacao.py  instituicoes.py  pagamentos_cartao.py  posicao_atual.py  posicoes_br.py  posicoes_comum.py  posicoes_cripto.py  posicoes_eua.py  produtos.py  proventos.py  receitas.py  replicacao.py  resumo.py  resumos_invest.py  saldos_contas.py  saldos_investimentos.py
backend/app/services/: auth.py  backup.py  balanceamento.py  consolidacao.py  conversao_bcb.py  cotacoes_externas.py  dashboard.py  posicao_atual.py  posicoes.py  replicacao.py
(+104 files in other folders)
