[project]
name = "financas-backend"
version = "0.7.0"
description = "Sistema de Gestao Financeira Pessoal - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.5",
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.2.0",
    "psycopg2-binary>=2.9.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]